# Valuation_Pricing_Tools

./: .env.example  Cargo.toml  README.md  implementation_plan.md  project_structure.md  requirements.md
.agents/rules/: GEMINI.md
.agents/workflows/: create-cli_cmd.md  data_processing_agent.md  pipeline-flow.md  universal_chunking_agent.md
config/: default.toml
src/: main.rs
src/api/: handlers.rs  mod.rs  models.rs
src/config/: attributes.rs  marketplace_profiles.rs  mod.rs
src/crew_integration/: mod.rs
src/engine/: fundamental_analysis.rs  mod.rs  nft_valuator.rs  scoring.rs  stock_valuator.rs
src/scrapers/: magic_eden.rs  mod.rs  opensea.rs  proxy_pool.rs  stock_data.rs
src/storage/: mod.rs  models.rs
