[package]
name = "valuation_pricing_tools"
version = "0.1.0"
edition = "2021"
description = "AI Config Pricing Engine - Hệ thống định giá thông minh cho NFT & Stock"
authors = ["nvhoa"]

[dependencies]
# Async runtime - đa luồng
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client cho scraping
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Caching
# redis = { version = "0.25", features = ["tokio-comp"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config management
config = { version = "0.14", features = ["toml"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Data parallelism
rayon = "1.10"

# Atomic swap cho hot-reload config
arc-swap = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Dotenv
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
